# optic

./: README.md
abstractions/: r.grab.bp.maxpat
cv.jit.patches/: cv-gl-view2.maxpat  cv-w-background.maxpat  o.cv.shape.lists.maxpat
jit.pcl/: jit.pcl.maxhelp
jit.pcl/include/: kinect_device_wrapper.cpp  kinect_device_wrapper.h  o.max.pcl.cpp  o.max.pcl.fn_queue.h  o.max.pcl.h  o.max.pcl.iss_keypoints.cpp  o.max.pcl.iss_keypoints.h  o.max.pcl.normals.h  o.max.pcl.passthrough.cpp  o.max.pcl.passthrough.h  o.max.pcl.voxel_grid.cpp  o.max.pcl.voxel_grid.h
jit.pcl/jit.freenect.pcl/: Info.plist  (+3 more)
jit.realsense.grab/: jit.realsense.grab.cpp  jit.realsense.grab.sln  jit.realsense.grab.vcproj  jit.realsense.grab.vcxproj  max.jit.realsense.grab-old.cpp  max.jit.realsense.grab.c
kinect/: OpenNI-freenect-driver-CMakeLists.txt.backup.txt  centroid.js  freenect-pcl-2.maxpat  freenect-pcl-2b.maxpat  freenect-pcl-3.maxpat  freenect-pcl.maxpat  gl-example.maxpat  kinect-point-cloud-blobs.maxpat  kinect-point-cloud-dev.maxpat  kinect-point-cloud-kmeans.maxpat  kinect-point-cloud-server.maxpat  kinect1-server.maxpat  kinect2-server.maxpat  kinect2-server_dev.maxpat  kmeans-test.maxpat  kvl_adapt.maxpat  o.kinect-server-starter.maxpat  pcl-server.maxpat  point-analysis.maxpat  receiver.maxpat  receiver_b.maxpat
o.io.opencv/: o.io.opencv.cpp
pcl-dev/: CMakeLists.txt  Source.cpp  pcd_write.cpp  pcl_.sln  pcl_.vcxproj
server-subscription/: receiver-0.maxpat  receiver-0_dev.maxpat  receiver-1_.maxpat  subscripter-0.maxpat  subscripter-1.maxpat  subscripter-2.maxpat
(+76 files in other folders)
